--- a/boston_ridership.ipynb
+++ b/boston_ridership.ipynb
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -152,14 +152,12 @@
        "      <th>residents</th>\n",
        "      <th>jobs</th>\n",
        "      <th>potential</th>\n",
-       "      <th>offset</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>count</th>\n",
        "      <td>55.00000</td>\n",
-       "      <td>55.000000</td>\n",
        "      <td>55.000000</td>\n",
        "      <td>55.000000</td>\n",
        "      <td>55.000000</td>\n",
@@ -172,7 +170,6 @@
        "      <td>60187.400000</td>\n",
        "      <td>37914.800000</td>\n",
        "      <td>98102.200000</td>\n",
-       "      <td>-89767.090909</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>std</th>\n",
@@ -181,7 +178,6 @@
        "      <td>55279.191396</td>\n",
        "      <td>55291.736824</td>\n",
        "      <td>106778.899699</td>\n",
-       "      <td>104653.192049</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>min</th>\n",
@@ -190,7 +186,6 @@
        "      <td>1522.000000</td>\n",
        "      <td>368.000000</td>\n",
        "      <td>4111.000000</td>\n",
-       "      <td>-338657.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>25%</th>\n",
@@ -199,7 +194,6 @@
        "      <td>18209.000000</td>\n",
        "      <td>3126.000000</td>\n",
        "      <td>21729.500000</td>\n",
-       "      <td>-150929.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>50%</th>\n",
@@ -208,7 +202,6 @@
        "      <td>34317.000000</td>\n",
        "      <td>6293.000000</td>\n",
        "      <td>42897.000000</td>\n",
-       "      <td>-37045.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>75%</th>\n",
@@ -217,7 +210,6 @@
        "      <td>97816.000000</td>\n",
        "      <td>58182.500000</td>\n",
        "      <td>160572.000000</td>\n",
-       "      <td>-15520.500000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>max</th>\n",
@@ -226,7 +218,6 @@
        "      <td>177919.000000</td>\n",
        "      <td>187297.000000</td>\n",
        "      <td>355228.000000</td>\n",
-       "      <td>6663.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -243,18 +234,18 @@
        "75%    41.50000         11317.500000   97816.000000   58182.500000   \n",
        "max    55.00000         24639.000000  177919.000000  187297.000000   \n",
        "\n",
-       "           potential         offset  \n",
-       "count      55.000000      55.000000  \n",
-       "mean    98102.200000  -89767.090909  \n",
-       "std    106778.899699  104653.192049  \n",
-       "min      4111.000000 -338657.000000  \n",
-       "25%     21729.500000 -150929.500000  \n",
-       "50%     42897.000000  -37045.000000  \n",
-       "75%    160572.000000  -15520.500000  \n",
-       "max    355228.000000    6663.000000  "
+       "           potential  \n",
+       "count      55.000000  \n",
+       "mean    98102.200000  \n",
+       "std    106778.899699  \n",
+       "min      4111.000000  \n",
+       "25%     21729.500000  \n",
+       "50%     42897.000000  \n",
+       "75%    160572.000000  \n",
+       "max    355228.000000  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -277,11 +268,10 @@
        "residents              0\n",
        "jobs                   0\n",
        "potential              0\n",
-       "offset                 0\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -298,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2083,7 +2073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -3151,6 +3141,24 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the linear regression coefficients\n",
+    "# Print the coefficients and intercept\n",
+    "print(\"Coefficients:\")\n",
+    "print(f\"Jobs: {model.coef_[0]:.6f}\")\n",
+    "print(f\"Residents: {model.coef_[1]:.6f}\")\n",
+    "print(f\"\\nIntercept: {model.intercept_:.6f}\")\n",
+    "\n",
+    "# Calculate and print R-squared score\n",
+    "r2_score = model.score(x, y)\n",
+    "print(f\"\\nR-squared Score: {r2_score:.6f}\")\n"
    ]
   },
   {
