--- a/view.ipynb
+++ b/view.ipynb
@@ -706,8 +706,46 @@
     "# https://boston.maps.arcgis.com/home/item.html?id=cb00f9248aa6404ab741071ca3806c0e\n",
     "\n",
     "# Inflation rate\n",
-    "# https://www.macrotrends.net/global-metrics/countries/USA/united-states/inflation-rate-cpi#:~:text=Inflation%20as%20measured%20by%20the,a%200.58%25%20decline%20from%202019."
+    "# https://www.macrotrends.net/global-metrics/countries/USA/united-states/inflation-rate-cpi#:~:text=Inflation%20as%20measured%20by%20the,a%200.58%25%20decline%20from%202019.\n",
+    "\n",
+    "# Boston healthcare\n",
+    "# https://www.arcgis.com/home/item.html?id=fd726cf72b4d4ce3a599db1036d2ec7e\n",
+    "\n",
+    "# Boston Police Department\n",
+    "# https://www.arcgis.com/home/item.html?id=e5a0066d38ac4e2abbc7918197a4f6af\n",
+    "\n",
+    "# Boston Public School Assets\n",
+    "# https://www.arcgis.com/home/item.html?id=2690b82057424274a52648699895fb14\n",
+    "\n",
+    "# Boston Universities\n",
+    "# https://www.arcgis.com/home/item.html?id=359e813a709b4d708a7cdb022c9bf4e4\n",
+    "\n",
+    "# Boston Fire Department\n",
+    "# https://boston.maps.arcgis.com/home/item.html?id=092857c15cbb49e8b214ca5e228317a1\n",
+    "\n",
+    "# Boston Sports\n",
+    "# https://gis.data.mass.gov/datasets/CambridgeGIS::sports-areas/about\n",
+    "\n",
+    "# Boston street trees\n",
+    "# https://bostonopendata-boston.opendata.arcgis.com/maps/boston::treekeeper-street-trees\n",
+    "\n",
+    "# Boston bus stops\n",
+    "# https://www.arcgis.com/home/item.html?id=7ae31a78d54349c5b5ac8457d89419b0"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
