Create initial analysis of mixed use district

--- a/spatial_analysis.ipynb
+++ b/spatial_analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 331,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,16 +13,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_12655/3517134994.py:1: DtypeWarning: Columns (65) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_3402/3517134994.py:1: DtypeWarning: Columns (65) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data_21 = pd.read_csv(\"data/parcels_21.csv\")\n",
-      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_12655/3517134994.py:2: DtypeWarning: Columns (20,65) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/var/folders/wy/50c5sv7n4wsfhhww_wwjz2tr0000gn/T/ipykernel_3402/3517134994.py:2: DtypeWarning: Columns (20,65) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  data_24 = pd.read_csv(\"data/parcels_24.csv\")\n"
      ]
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 333,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -333,7 +333,7 @@
        "[8 rows x 68 columns]"
       ]
      },
-     "execution_count": 333,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -344,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 336,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 337,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 337,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -521,7 +521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 338,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -530,7 +530,7 @@
        "np.int64(9127)"
       ]
      },
-     "execution_count": 338,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -541,7 +541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 339,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -563,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 340,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 341,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -594,7 +594,7 @@
        "np.float64(0.0)"
       ]
      },
-     "execution_count": 341,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 342,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -622,7 +622,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 342,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 344,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -770,6 +770,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "113560"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 348,
    "metadata": {},
    "outputs": [
@@ -787,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -838,6 +858,31 @@
     "print(f\"Count: {len(negative_real_increases)} ({(len(negative_real_increases)/len(data))*100:.1f}% of properties)\")\n",
     "print(\"\\nSummary of Real Increases for Properties with Gains:\")\n",
     "print(negative_real_increases[\"REAL_INCREASE_PERCENT\"].describe())\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create a circular graph of the increase and decreased property count \n",
+    "\n",
+    "# Create a pie chart showing the proportion of properties with positive vs negative real increases\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "# Calculate counts\n",
+    "negative_count = len(negative_real_increases)\n",
+    "\n",
+    "# Create pie chart\n",
+    "plt.figure(figsize=(10,8))\n",
+    "plt.pie([positive_count, negative_count], \n",
+    "        labels=['Properties with Real Value Increases', 'Properties with Real Value Decreases'],\n",
+    "        autopct='%1.1f%%',\n",
+    "        colors=['lightgreen', 'lightcoral'])\n",
+    "plt.title('Distribution of Properties by Real Value Change')\n",
+    "plt.axis('equal')\n",
+    "plt.show()\n"
    ]
   },
   {
