--- a/view.ipynb
+++ b/view.ipynb
@@ -730,7 +730,15 @@
     "# https://bostonopendata-boston.opendata.arcgis.com/maps/boston::treekeeper-street-trees\n",
     "\n",
     "# Boston bus stops\n",
-    "# https://www.arcgis.com/home/item.html?id=7ae31a78d54349c5b5ac8457d89419b0"
+    "# https://www.arcgis.com/home/item.html?id=7ae31a78d54349c5b5ac8457d89419b0\n",
+    "\n",
+    "# Boston movie theaters\n",
+    "# https://services1.arcgis.com/qN3V93cYGMKQCOxL/arcgis/rest/services/irl577_Harvard_CGA_MovieTheaters_v3_Layers/FeatureServer\n",
+    "\n",
+    "# Boston sports stadiums\n",
+    "\n",
+    "# Boston museum and art galleries\n",
+    "# https://www-tlstest.arcgis.com/home/item.html?id=9d1b74d024534c6cb484abb83525aef5"
    ]
   },
   {
