--- a/spatial_analysis_mixed_lifestyle.ipynb
+++ b/spatial_analysis_mixed_lifestyle.ipynb
@@ -1418,30 +1418,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cross Validation Scores:\n",
-      "Fold 1: 0.4515\n",
-      "Fold 2: 0.3576\n",
-      "Fold 3: 0.3273\n",
-      "Fold 4: 0.4227\n",
-      "Fold 5: 0.3051\n",
-      "\n",
-      "Mean CV Score: 0.3728\n",
-      "Standard Deviation: 0.0558\n",
-      "\n",
-      "Feature importances:\n",
-      "[0.06315628 0.06841538 0.03113539 0.04113229 0.03536809 0.03015347\n",
-      " 0.02682971 0.04417037 0.05487896 0.02619508 0.03733344 0.42919686\n",
-      " 0.05428541 0.05774928]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from xgboost import XGBRegressor\n",
     "from sklearn.model_selection import cross_val_score, KFold\n",
@@ -1453,11 +1432,11 @@
     "X = data[X1_cols]\n",
     "\n",
     "# Initialize model with same parameters\n",
-    "# model = XGBRegressor(max_depth=11, n_estimators=2031, learning_rate=0.013,\\\n",
-    "#     subsample=0.72, colsample_bytree=0.6, gamma=0.1, reg_lambda=1.95, reg_alpha=2.1,\n",
-    "#     min_child_weight=11)\n",
+    "model = XGBRegressor(max_depth=11, n_estimators=2031, learning_rate=0.013,\\\n",
+    "    subsample=0.72, colsample_bytree=0.6, gamma=0.1, reg_lambda=1.95, reg_alpha=2.1,\n",
+    "    min_child_weight=11)\n",
     "\n",
-    "model = XGBRegressor()\n",
+    "# model = XGBRegressor()\n",
     "\n",
     "\n",
     "# Perform 5-fold cross validation\n",
@@ -1640,7 +1619,11 @@
     "X = data[X2_cols]\n",
     "\n",
     "# Initialize model with same parameters\n",
-    "model = XGBRegressor()\n",
+    "# model = XGBRegressor()\n",
+    "\n",
+    "model = XGBRegressor(max_depth=11, n_estimators=2031, learning_rate=0.013,\\\n",
+    "    subsample=0.72, colsample_bytree=0.6, gamma=0.1, reg_lambda=1.95, reg_alpha=2.1,\n",
+    "    min_child_weight=11)\n",
     "\n",
     "\n",
     "# Perform 5-fold cross validation\n",
